updated position logic
